ref: change input border color

--- a/src/styles/Input.scss
+++ b/src/styles/Input.scss
@@ -3,7 +3,7 @@
   height: 27px;
   padding: 10px;
   border-radius: 15px;
-  border: 1px solid #777;
+  border: 1px solid var(--gray);
   outline: 0;
   font-weight: 700;
   margin: 5px 15px;
